# lionel

./: .gitignore  README.md  environment.yml  environment_forecasting.yml  environment_nn.yml  example_selection.ipynb  luigi.cfg  pyproject.toml
data/analysis/: train_30_241.csv
data/cleaned/: team_ids_23.csv  team_ids_24.csv
data/processed/: gw_stats_23.csv  gw_stats_24.csv
data/raw/: players_raw_24_2.csv
examples/selector/: example_xi_selection_2.py  example_xv_update.py
lionel/: constants.py  run.py  selector.py
lionel/dags/: dataload_tasks.py  prediction_tasks.py  sampler_config.json  training_tasks.py
lionel/data_load/: constants.py  run.py
lionel/db/: connector.py  schema.py
lionel/model/: hierarchical.py  load_data.py  lstm.py  lstm_runner.py  lstm_with_relu.py  ml_runner.py  prepare_data.py  run.py  train_lstm.py  train_lstm2.py
lionel/scripts/: add_24_data.py  dl_db_upload.py  dl_init_db.py  init_db.py  prepare_data.py  process_train_data.py  run.py  run_data_load.py  run_db_upload.py  run_prediction.py  run_selection.py  run_team.py  run_training.py  train_process_data.py
lionel/select/: run.py  selector.py
lionel/team/: prepare_data.py  run.py  select.py  team.py
src/: utils.py
src/dags/: dataload_tasks.py  prediction_tasks.py  sampler_config.json  training_tasks.py  utils.py
src/lionel/: constants.py
src/scripts/: create_tables.sql  run.sh
src/team/: select.py
tests/: conftest.py  test_budgeter.py
tests/data/: candidates_xi.json  candidates_xv.json
tests/integration/: test_selector.py
tests/test_team/: test_select.py
(+67 files in other folders)
